src/test/deca/avecObjet/valid/call_method_one_param_int copy.deca
// Description :
//    Appel d'une méthode avec un paramètre int.
//
// Resultats :
//    OK

class A {
    void m(int x) {
        println(x);
    }
}

{
    A a = new A();
    a.m(1);
}

