src/test/deca/avecObjet/invalid/call_method_wrong_arg_type_bool_int.deca
// Description :
//    Appel de méthode avec un argument bool au lieu de int.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f(int x) {
        return x;
    }
}

{
    A a = new A();
    a.f(true);
}

